<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.insert_game.InsertGameDetailActivity">


    <FrameLayout
        android:id="@+id/flHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/antique_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_ic_back"
            android:padding="24dp"
            android:src="@drawable/ic_back"
            app:tint="@color/primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insert_game"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>


    <ScrollView
        android:id="@+id/svContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flHeader">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMatchType"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvMatchType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:text="@string/match_type"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivArrowMatchType"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/description_icon_arrow"
                    android:padding="24dp"
                    android:src="@drawable/ic_forward_ios"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/firstDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/antique_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvMatchType" />

            <LinearLayout
                android:id="@+id/llMatchType"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="4dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstDivider">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey_forward_arrow"
                    android:paddingHorizontal="32dp"
                    android:text="@string/league"
                    android:textColor="@color/black"
                    app:icon="@drawable/img_trofeo_boscos"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey_forward_arrow"
                    android:paddingHorizontal="32dp"
                    android:text="@string/cup"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_cup"
                    app:iconTint="@null" />

            </LinearLayout>

            <View
                android:id="@+id/secondDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/antique_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llMatchType" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvMatchLocal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:cardBackgroundColor="@color/primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/secondDivider">

                <TextView
                    android:id="@+id/tvMatchLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:text="@string/match_local"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivArrowMatchLocal"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/description_icon_arrow"
                    android:padding="24dp"
                    android:src="@drawable/ic_forward_ios"
                    app:tint="@color/white" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/thirdDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/antique_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvMatchLocal" />

            <LinearLayout
                android:id="@+id/llMatchLocal"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal"
                android:padding="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/thirdDivider">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey_forward_arrow"
                    android:paddingHorizontal="32dp"
                    android:text="@string/local"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_local"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/grey_forward_arrow"
                    android:paddingHorizontal="32dp"
                    android:text="@string/visitor"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_away"
                    app:iconTint="@null" />

            </LinearLayout>

            <View
                android:id="@+id/fourthDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/antique_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llMatchLocal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>