<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary">

    <ImageView
        android:id="@+id/ivArrow"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:contentDescription="@string/description_football_player"
        android:padding="4dp"
        android:paddingHorizontal="4dp"
        android:src="@drawable/ic_up" />

    <TextView
        android:id="@+id/tvPlayerName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="4dp"
        android:text="@string/madariaga"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerProportion"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerGoals"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerAssists"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerBigMistakes"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerCleanSheet"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tvPlayerGames"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/random_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />


</TableRow>